tighten java-lang-import to avoid false-positive on subpackage wildcard
This is being a bit anal, but this rule shouldn't emit a false positive
if you do a wildcard import from a subpackage of java.lang, e.g.

    import java.lang.classfile.*;

The issue is, it can be a bit confusing as you get two errors instead of
just the `WildcardImport` error. Anchor it.

Found by testing rules on openjdk sources.

--- a/gradle/validation/ast-grep/rules/java-patterns.yml
+++ b/gradle/validation/ast-grep/rules/java-patterns.yml
@@ -5,7 +5,7 @@
 id: java-lang-import
 language: java
 rule:
-  pattern: import java.lang.$REF
+  pattern: import java.lang.$REF;
   kind: import_declaration
 fix: ""
 severity: error
