--- a/.github/workflows/auto-format-bot.yml
+++ b/.github/workflows/auto-format-bot.yml
@@ -67,13 +67,15 @@ jobs:
 
       - uses: ./.github/actions/prepare-for-build
 
-      - name: Install eclint
-        uses: ./.github/actions/eclint
-
       - name: Install ast-grep
         run: |
           npm -g i @ast-grep/cli
           echo "lucene.tool.ast-grep=ast-grep" >> build-options.local.properties
+
+      - name: Disable eclint task (using alternative tools)
+        run: |
+          echo "# Disable eclint task - using Prettier/shfmt/manual fixes instead" >> build-options.local.properties
+          echo "# lucene.tool.eclint is not set, so applyEcLint task will be disabled" >> build-options.local.properties
 
       - name: Get changed files for information
         id: changed_files
@@ -129,14 +131,24 @@ jobs:
           # Fix files that Prettier can handle (respects .editorconfig automatically)
           prettier --write "**/*.{json,yaml,yml,md,html,css,js}" --ignore-path .gitignore || true
 
+          echo "→ Fixing Markdown indentation to 4 spaces..."
+          # Fix Markdown files to use 4-space indentation as required by .editorconfig
+          find . -name "*.md" -not -path "./.git/*" -not -path "./build/*" -not -path "./.gradle/*" -not -path "./node_modules/*" \
+            -exec sed -i 's/^  /    /g' {} \; || true
+
           echo "→ Applying shell script formatting via shfmt..."
           # Format shell scripts (respects .editorconfig automatically)
           find . -name "*.sh" -not -path "./.git/*" -not -path "./build/*" -not -path "./.gradle/*" -not -path "./node_modules/*" \
             -exec shfmt -i 2 -ci -w {} \; || true
 
+          echo "→ Fixing CMD file line endings to CRLF..."
+          # Fix CMD and BAT files to use CRLF line endings as required by .editorconfig
+          find . -type f \( -name "*.cmd" -o -name "*.bat" \) -not -path "./.git/*" -not -path "./build/*" -not -path "./.gradle/*" \
+            -exec sed -i 's/$/\r/' {} \; || true
+
           echo "→ Applying remaining EditorConfig fixes..."
           # Handle remaining files that need manual processing
-          find . -type f \( -name "*.gradle" -o -name "*.groovy" -o -name "*.txt" -o -name "*.properties" -o -name "*.bat" -o -name "*.cmd" \) \
+          find . -type f \( -name "*.gradle" -o -name "*.groovy" -o -name "*.txt" -o -name "*.properties" \) \
             -not -path "./.git/*" -not -path "./build/*" -not -path "./.gradle/*" -not -path "./node_modules/*" \
             -exec sed -i 's/[[:space:]]*$//' {} \;
 
@@ -232,8 +244,10 @@ jobs:
             ### 🔧 Changes Applied
             - ✅ Code formatting via \`./gradlew tidy\`
             - ✅ **Java files**: Formatted with Google Java Format (includes EditorConfig compliance)
-            - ✅ **JSON/YAML/Markdown/HTML/CSS/JS**: EditorConfig fixes via Prettier
+            - ✅ **JSON/YAML/HTML/CSS/JS**: EditorConfig fixes via Prettier
+            - ✅ **Markdown files**: Fixed indentation to 4 spaces (EditorConfig compliance)
             - ✅ **Shell scripts**: Formatted with shfmt (respects EditorConfig)
+            - ✅ **CMD/BAT files**: Fixed line endings to CRLF (EditorConfig compliance)
             - ✅ **Gradle/Groovy/Properties**: Manual EditorConfig fixes (trailing whitespace, final newlines)
             - ✅ Gradle/Groovy scripts formatted with spotless
             - ✅ Dependency catalog formatting
