Move more gradle scripts to java (#14933)
* Move lucene.root-project.check-environment.gradle to java.

* Move some properties from ext to the globals extension (typed).

* Moved utility methods to regenerate, where they're used.

* Fix per-project summary regression.

* Fix test summary formatting again.

* Added QuietExec task in favor of quietExec method on the root project. Replaced two initial places where quietExec was used.

* regenerate.forUtil wasn't included in the build. Modified task wrapping for persistent checksums a bit so that it accepts other inputs than strings. manual exclusion for quiet exec props is required though.

* Simplified code in lucene.regenerate.forUtil.gradle.

* Replaced a few more quietExec calls with QuietExec task.

* Added quietExec utility method to build globals. Don't know how to get rid of it cleanly yet - it is used in reasonable code that calls several commands, sequentially.

* Removed lucene.root-project.setup.gradle and moved it to Java. Cleaned up some cruft from there.

* Inlined lucene.all-projects.conventions into root project setup.

* Move the help plugin to java.

* Moved more gradle scripts to java.

* Correct changesToHtml regression.

* Slightly changes the snowball regeneration script to work on macosx's old bash. Regenerated.

* Add a workaround for #14941

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+import org.apache.lucene.gradle.plugins.misc.CheckEnvironmentPlugin
 import org.apache.lucene.gradle.plugins.spotless.GoogleJavaFormatPlugin
 
 /*
@@ -18,14 +19,12 @@ import org.apache.lucene.gradle.plugins.spotless.GoogleJavaFormatPlugin
  */
 
 plugins {
-  // Apply convention plugins from the composite build-infra project.
+  // Apply build plugins from the composite build-infra project.
   // The order of plugins does matter (most of the time).
   id "lucene.root-project.check-environment"
+
+  id "base"
   id "lucene.root-project.setup"
-
-  id "lucene.all-projects.conventions"
-
-  id "lucene.help"
 
   id "lucene.java-projects.conventions"
 
@@ -59,8 +58,6 @@ plugins {
 
   id "lucene.datasets.external-datasets"
 
-  id "lucene.hacks.downloader-retries"
-  id "lucene.hacks.wipe-gradle-temp"
   id "lucene.hacks.turbocharge-jvm-opts"
   id "lucene.hacks.dummy-outputs"
 
@@ -71,6 +68,7 @@ plugins {
 
   id "lucene.regenerate"
   id "lucene.regenerate.jflex"
+  id "lucene.regenerate.forUtil"
   id "lucene.regenerate.moman"
   id "lucene.regenerate.kuromoji"
   id "lucene.regenerate.nori"
@@ -79,6 +77,7 @@ plugins {
   id "lucene.regenerate.antlr"
   id "lucene.regenerate.unicode-test-classes"
   id "lucene.regenerate.extract-jdk-apis"
+  id "lucene.regenerate.snowball"
 }
 
 description = 'Grandparent project for Apache Lucene Core'
