--- a/build-tools/build-infra-shadow/build.gradle
+++ b/build-tools/build-infra-shadow/build.gradle
@@ -51,6 +51,7 @@ dependencies {
   implementation plugin(deps.plugins.carrotsearch.buildopts)
   implementation plugin(deps.plugins.carrotsearch.dependencychecks)
   implementation plugin(deps.plugins.forbiddenapis)
+  implementation plugin(deps.plugins.undercouch.download)
 }
 
 tasks.matching {
@@ -70,7 +71,7 @@ tasks.matching {
 }
 
 // make certain tasks think their sources are from build-infra.
-if (!isIdea) {
+if (!buildGlobals.intellijIdea.get().isIdea) {
   plugins.withType(JavaPlugin).configureEach {
     SourceSet main = sourceSets.main
     main.java.srcDirs = rootProject.files("build-tools/build-infra/src/main/java")
