--- a/build-tools/build-infra/src/main/groovy/lucene.regenerate.snowball.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.regenerate.snowball.gradle
@@ -14,6 +14,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+import org.apache.lucene.gradle.plugins.misc.QuietExec
 import de.undercouch.gradle.tasks.download.Download
 import org.apache.tools.ant.taskdefs.condition.Os
 
@@ -71,17 +72,17 @@ configure(project(":lucene:analysis:common")) {
   }
 
   // runs shell script to regenerate stemmers, base stemming subclasses, test data, and stopwords.
-  task snowballInternal() {
+  def snowballInternal = tasks.register("generateSnowballInternal", QuietExec, {
     description = "Regenerate snowball stemmers."
     group = "generation"
 
     inputs.files fileTree(
         dir: "src/java/org/tartarus/snowball",
         include: [
-          "Among.java",
-          "SnowballStemmer.java",
-          "SnowballProgram.java",
-          "ext/*Stemmer.java"
+            "Among.java",
+            "SnowballStemmer.java",
+            "SnowballProgram.java",
+            "ext/*Stemmer.java"
         ])
 
     inputs.files fileTree(
@@ -97,22 +98,18 @@ configure(project(":lucene:analysis:common")) {
     } else {
       dependsOn downloadSnowballStemmers
       dependsOn downloadSnowballWebsite
-
-      doFirst {
-        project.quietExec {
-          executable "bash"
-          args = [
-            snowballScript,
-            snowballStemmerDir,
-            snowballWebsiteDir,
-            projectDir
-          ]
-        }
-      }
     }
-  }
 
-  regenerate.dependsOn wrapWithPersistentChecksums(snowballInternal, [
+    executable "bash"
+    args = [
+        snowballScript,
+        snowballStemmerDir,
+        snowballWebsiteDir,
+        projectDir
+    ]
+  })
+
+  regenerate.dependsOn wrapWithPersistentChecksums2(snowballInternal, [
     andThenTasks: [
       "applyGoogleJavaFormat"
     ],
