--- a/build-tools/build-infra-shadow/build.gradle
+++ b/build-tools/build-infra-shadow/build.gradle
@@ -51,6 +51,7 @@ dependencies {
   implementation plugin(deps.plugins.carrotsearch.buildopts)
   implementation plugin(deps.plugins.carrotsearch.dependencychecks)
   implementation plugin(deps.plugins.forbiddenapis)
+  implementation plugin(deps.plugins.spotless)
   implementation plugin(deps.plugins.undercouch.download)
 }
 
