--- a/gradle/validation/ast-grep/tests/java-patterns.yml
+++ b/gradle/validation/ast-grep/tests/java-patterns.yml
@@ -115,3 +115,24 @@ valid:
     module org.apache.lucene.foo {
       requires org.apache.lucene.bar;
     }
+---
+id: javadoc-only-inheriting-super
+invalid:
+  - /** {@inheritDoc} */
+  - /** {@inheritDoc } */
+  - |
+    /**
+     * {@inheritDoc}
+     */
+valid:
+  - |
+    /**
+     * {@inheritDoc}
+     *
+     * And something.
+     */
+  - |
+    /**
+     * Something and...
+     * {@inheritDoc}
+     */
