--- a/gradle/validation/ast-grep/tests/java-patterns.yml
+++ b/gradle/validation/ast-grep/tests/java-patterns.yml
@@ -120,19 +120,16 @@ id: javadoc-only-inheriting-super
 invalid:
   - /** {@inheritDoc} */
   - /** {@inheritDoc } */
-  - |
-    /**
-     * {@inheritDoc}
-     */
+  - "/**\n * {@inheritDoc}\n */"
 valid:
   - |
     /**
-     * {@inheritDoc}
-     *
-     * And something.
-     */
+    * {@inheritDoc}
+    *
+    * And something.
+    */
   - |
     /**
-     * Something and...
-     * {@inheritDoc}
-     */
+    * Something and...
+    * {@inheritDoc}
+    */
